<resources>
    <string name="app_name">mad-libs</string>
    <string name="welcomeText">Welcome to Mad Libs! I will ask you to fill in words to complete a story. You won\'t be able to see the whole story until you are done filling in all the missing words. That\'s part the fun. Select a file below to get started...</string>
    <string name="startText">GET STARTED</string>
    <string name="fillIn">Fill in the words to complete the story!</string>
    <string name="words_left">words left</string>
    <string name="word">word</string>
    <string name="next">Next</string>
    <string name="madLib">Your Mad Lib Story!</string>
    <string name="story">Story</string>
    <string name="play_again">Play Again</string>
</resources>
