<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_home_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.cait.mad_libs.HomePage">


    <TextView
        android:text="@string/fillIn"
        android:textSize="30sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:id="@+id/fillInText" />

    <TextView
        android:text="@string/words_left"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fillInText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:id="@+id/wordsLeftText" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textAutoCorrect"
        android:hint="@string/word"
        android:ems="10"
        android:layout_below="@+id/wordsLeftText"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:id="@+id/wordUser" />

    <Button
        android:text="@string/next"
        android:textSize="30sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/wordUser"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:id="@+id/okButton"
        android:onClick="nextWord"/>
</RelativeLayout>
