<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_story"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.cait.mad_libs.StoryActivity">

    <TextView
        android:text="@string/madLib"
        android:textSize="30sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="43dp"
        android:id="@+id/storyTitle" />

    <TextView
        android:text="@string/story"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/storyTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="99dp"
        android:id="@+id/storyText" />

    <Button
        android:text="@string/play_again"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/storyText"
        android:layout_centerHorizontal="true"
        android:id="@+id/button"
        android:onClick="playAgain"/>
</RelativeLayout>
